--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,8 @@
-<footer (click)="toogleCredits()" [@openClose]="isOpen ? 'open' : 'closed'">
+<footer
+  class="footer"
+  (click)="toogleCredits()"
+  [@openClose]="isOpen ? 'open' : 'closed'"
+>
   <div *ngIf="!isOpen"><i class="material-icons">remove</i></div>
 
   <div *ngIf="isOpen">
