WIP: Initial Page designed

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,10 +6,59 @@
   <h2 fxFlex fxFill>Admin Dashboard</h2>
 </div>
 
-<mat-tab-group mat-stretch-tabs>
+<div class="dashboard-content">
+  <mat-card class="example-card">
+    <img
+      mat-card-image
+      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+      alt="Photo of a Shiba Inu"
+    />
+    <mat-card-content>
+      <mat-card-title>LEAD Points</mat-card-title>
+      <mat-card-subtitle>Add LEAD points to one user</mat-card-subtitle>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="example-card">
+    <img
+      mat-card-image
+      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+      alt="Photo of a Shiba Inu"
+    />
+    <mat-card-content>
+      <mat-card-title>User Management</mat-card-title>
+      <mat-card-subtitle>A list with details of all users</mat-card-subtitle>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="example-card">
+    <img
+      mat-card-image
+      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+      alt="Photo of a Shiba Inu"
+    />
+    <mat-card-content>
+      <mat-card-title>Logs</mat-card-title>
+      <mat-card-subtitle>
+        Check all the changes that have been made
+      </mat-card-subtitle>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="example-card">
+    <img
+      mat-card-image
+      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+      alt="Photo of a Shiba Inu"
+    />
+    <mat-card-content>
+      <mat-card-title>Reset Points</mat-card-title>
+      <mat-card-subtitle>Reset LEAD Points</mat-card-subtitle>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<!-- <mat-tab-group mat-stretch-tabs>
   <mat-tab label="Points"><app-points></app-points></mat-tab>
 
-  <!-- <mat-tab label="Bulk"><app-bulk></app-bulk></mat-tab> -->
+  <mat-tab label="Bulk"><app-bulk></app-bulk></mat-tab>
 
   <mat-tab label="Logs"><app-logs></app-logs></mat-tab>
-</mat-tab-group>
+</mat-tab-group> -->
