--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -7,3 +7,16 @@
     text-align: center;
   }
 }
+
+.dashboard-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+mat-card {
+  margin: 2%;
+  width: 46%;
+  mat-card-content {
+    text-align: center;
+  }
+}
